Updating model to added 2020 data to see if it improves the results.

--- a/Seg_two_model_C.ipynb
+++ b/Seg_two_model_C.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
        "4    1900-1959    1940.0        0.0          0         0       579  "
       ]
      },
-     "execution_count": 70,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "565963"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights_2019.DAY_OF_MONTH.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "565963"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights_2019.dropna(axis=0).DAY_OF_MONTH.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "599268"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights_2020.DAY_OF_MONTH.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "599268"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "flights_2020.dropna(axis=0).DAY_OF_MONTH.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "flights = pd.concat([flights_2019, flights_2020])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -251,18 +340,18 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "flights_2019.columns"
+    "flights.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -384,36 +473,36 @@
        "4    1900-1959   N8974C    1847.0  "
       ]
      },
-     "execution_count": 102,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#Create a new dataframe with only relavent testing data\n",
+    "#Create a new dataframe with only relavent testing data that we will be collecting from the user or building a database for.\n",
     "filteredList = ['DAY_OF_MONTH', 'DAY_OF_WEEK', 'OP_CARRIER', 'ORIGIN', 'DEST', 'DEP_DEL15', 'DISTANCE'\n",
     "                ,'DEP_TIME_BLK', 'TAIL_NUM', 'DEP_TIME']\n",
     "\n",
     "columnsRemoved = ['OP_CARRIER_AIRLINE_ID', 'DEST_AIRPORT_SEQ_ID', 'ORIGIN_AIRPORT_SEQ_ID' , 'ORIGIN_AIRPORT_ID'\n",
     "                  , 'OP_CARRIER_FL_NUM', 'DEST_AIRPORT_ID', 'ARR_TIME', 'ARR_DEL15', 'CANCELLED', 'DIVERTED', 'DEP_TIME']\n",
     "\n",
-    "machine_model_2019_df = flights.filter(filteredList)\n",
-    "machine_model_2019_df.head()"
+    "machine_model_df = flights.filter(filteredList)\n",
+    "machine_model_df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "machine_model_2019_df.DEP_DEL15 = machine_model_2019_df.DEP_DEL15.astype('int')\n",
-    "machine_model_2019_df.DEP_TIME = machine_model_2019_df.DEP_TIME.astype('int')"
+    "machine_model_df.DEP_DEL15 = machine_model_df.DEP_DEL15.astype('int')\n",
+    "machine_model_df.DEP_TIME = machine_model_df.DEP_TIME.astype('int')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -432,18 +521,18 @@
        "dtype: object"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "machine_model_2019_df.dtypes"
+    "machine_model_df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -457,54 +546,54 @@
        "dtype: object"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "machine_model_2019_df.dtypes[machine_model_2019_df.dtypes == \"object\"]"
+    "machine_model_df.dtypes[machine_model_df.dtypes == \"object\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "OP_CARRIER        17\n",
-       "ORIGIN           346\n",
-       "DEST             346\n",
+       "ORIGIN           353\n",
+       "DEST             353\n",
        "DEP_TIME_BLK      19\n",
-       "TAIL_NUM        5441\n",
+       "TAIL_NUM        5854\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Generate our categorical variable list\n",
-    "flights_cat = machine_model_2019_df.dtypes[machine_model_2019_df.dtypes == \"object\"].index.tolist()\n",
+    "flights_cat = machine_model_df.dtypes[machine_model_df.dtypes == \"object\"].index.tolist()\n",
     "\n",
     "# Check the number of unique values in each column\n",
-    "machine_model_2019_df[flights_cat].nunique()"
+    "machine_model_df[flights_cat].nunique()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Tranform each column with LabelEncoder (https://stackoverflow.com/questions/24458645/label-encoding-across-multiple-columns-in-scikit-learn)\n",
     "d = defaultdict(LabelEncoder)\n",
     "\n",
-    "df = machine_model_2019_df[flights_cat]\n",
+    "df = machine_model_df[flights_cat]\n",
     "\n",
     "# Encoding the variable\n",
     "encode_df = df.apply(lambda x: d[x.name].fit_transform(x))\n",
@@ -518,21 +607,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "OP_CARRIER        17\n",
-       "ORIGIN           346\n",
-       "DEST             346\n",
+       "ORIGIN           353\n",
+       "DEST             353\n",
        "DEP_TIME_BLK      19\n",
-       "TAIL_NUM        5441\n",
+       "TAIL_NUM        5854\n",
        "dtype: int64"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -543,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -588,10 +677,10 @@
        "      <td>300</td>\n",
        "      <td>601</td>\n",
        "      <td>0</td>\n",
-       "      <td>128</td>\n",
+       "      <td>130</td>\n",
        "      <td>19</td>\n",
        "      <td>1</td>\n",
-       "      <td>4316</td>\n",
+       "      <td>4648</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -601,10 +690,10 @@
        "      <td>596</td>\n",
        "      <td>1359</td>\n",
        "      <td>0</td>\n",
-       "      <td>225</td>\n",
-       "      <td>80</td>\n",
+       "      <td>227</td>\n",
+       "      <td>82</td>\n",
        "      <td>9</td>\n",
-       "      <td>1396</td>\n",
+       "      <td>1542</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -614,10 +703,10 @@
        "      <td>229</td>\n",
        "      <td>1215</td>\n",
        "      <td>0</td>\n",
-       "      <td>95</td>\n",
-       "      <td>80</td>\n",
+       "      <td>97</td>\n",
+       "      <td>82</td>\n",
        "      <td>7</td>\n",
-       "      <td>4472</td>\n",
+       "      <td>4810</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -627,10 +716,10 @@
        "      <td>223</td>\n",
        "      <td>1521</td>\n",
        "      <td>0</td>\n",
-       "      <td>325</td>\n",
+       "      <td>331</td>\n",
        "      <td>19</td>\n",
        "      <td>10</td>\n",
-       "      <td>4468</td>\n",
+       "      <td>4806</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -641,9 +730,9 @@
        "      <td>1847</td>\n",
        "      <td>0</td>\n",
        "      <td>19</td>\n",
-       "      <td>120</td>\n",
+       "      <td>122</td>\n",
        "      <td>14</td>\n",
-       "      <td>4529</td>\n",
+       "      <td>4867</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -658,48 +747,48 @@
        "4             1            2          0       579      1847           0   \n",
        "\n",
        "   ORIGIN  DEST  DEP_TIME_BLK  TAIL_NUM  \n",
-       "0     128    19             1      4316  \n",
-       "1     225    80             9      1396  \n",
-       "2      95    80             7      4472  \n",
-       "3     325    19            10      4468  \n",
-       "4      19   120            14      4529  "
+       "0     130    19             1      4648  \n",
+       "1     227    82             9      1542  \n",
+       "2      97    82             7      4810  \n",
+       "3     331    19            10      4806  \n",
+       "4      19   122            14      4867  "
       ]
      },
-     "execution_count": 109,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Concatenate the encoded columns\n",
-    "machine_model_2019_df_encoded = machine_model_2019_df.drop(flights_cat, axis=1)\n",
-    "machine_model_2019_df_encoded = pd.concat([machine_model_2019_df_encoded, encode_df], axis = 1)\n",
-    "machine_model_2019_df_encoded.head()"
+    "machine_model_df_encoded = machine_model_df.drop(flights_cat, axis=1)\n",
+    "machine_model_df_encoded = pd.concat([machine_model_df_encoded, encode_df], axis = 1)\n",
+    "machine_model_df_encoded.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create Feature and Target Variables\n",
-    "y = machine_model_2019_df_encoded[\"DEP_DEL15\"]\n",
-    "X = machine_model_2019_df_encoded.drop(columns=\"DEP_DEL15\")"
+    "y = machine_model_df_encoded[\"DEP_DEL15\"]\n",
+    "X = machine_model_df_encoded.drop(columns=\"DEP_DEL15\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(424472, 9)"
+       "(873923, 9)"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,28 +823,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create the Logistic Regression Model\n",
     "classifier = LogisticRegression(solver='lbfgs',\n",
-    "                                max_iter=1000,\n",
-    "                                random_state=40)"
+    "                                max_iter=2000,\n",
+    "                                random_state=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "LogisticRegression(max_iter=1000, random_state=40)"
+       "LogisticRegression(max_iter=20000, random_state=10)"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -767,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -799,7 +888,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -814,7 +903,7 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -859,7 +948,7 @@
        "    <tr>\n",
        "      <th>12</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>13</th>\n",
@@ -893,7 +982,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>19</th>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -902,10 +991,10 @@
       ],
       "text/plain": [
        "    Prediction  Actual\n",
-       "0            0       1\n",
+       "0            0       0\n",
        "1            0       0\n",
        "2            0       0\n",
-       "3            0       1\n",
+       "3            0       0\n",
        "4            0       0\n",
        "5            0       0\n",
        "6            0       0\n",
@@ -914,17 +1003,17 @@
        "9            0       0\n",
        "10           0       0\n",
        "11           0       0\n",
-       "12           0       0\n",
+       "12           0       1\n",
        "13           0       0\n",
        "14           0       0\n",
        "15           0       0\n",
        "16           0       0\n",
        "17           0       1\n",
        "18           0       0\n",
-       "19           0       1"
+       "19           1       1"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -938,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -947,12 +1036,12 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.87      1.00      0.93    116915\n",
-      "           1       1.00      0.26      0.42     24576\n",
+      "           0       0.88      1.00      0.94    246370\n",
+      "           1       1.00      0.26      0.41     44938\n",
       "\n",
-      "    accuracy                           0.87    141491\n",
-      "   macro avg       0.93      0.63      0.67    141491\n",
-      "weighted avg       0.89      0.87      0.84    141491\n",
+      "    accuracy                           0.89    291308\n",
+      "   macro avg       0.94      0.63      0.67    291308\n",
+      "weighted avg       0.90      0.89      0.86    291308\n",
       "\n"
      ]
     }
@@ -965,17 +1054,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[116900,     15],\n",
-       "       [ 18123,   6453]], dtype=int64)"
+       "array([[246343,     27],\n",
+       "       [ 33373,  11565]], dtype=int64)"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
