weather data edits

--- a/weather/api_pulls/2020/weather_pull_2020.ipynb
+++ b/weather/api_pulls/2020/weather_pull_2020.ipynb
@@ -4659,7 +4659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -4838,13 +4838,14 @@
        "[236592 rows x 7 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "weather_2020_df"
+    "def space(x):\n",
+    "        if x "
    ]
   },
   {
