Updates to structure

--- a/Seg_two_Machine Learning Model.ipynb
+++ b/Seg_two_Machine Learning Model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -227,7 +227,7 @@
        "4    1900-1959    1940.0        0.0          0         0       579  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1673,13 +1673,7 @@
       "27311/27311 [==============================] - 19s 704us/step - loss: 0.4048 - accuracy: 0.8461\n",
       "Epoch 75/100\n",
       "27311/27311 [==============================] - 19s 703us/step - loss: 0.4048 - accuracy: 0.8460\n",
-      "Epoch 76/100\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "Epoch 76/100\n",
       "27311/27311 [==============================] - 18s 677us/step - loss: 0.4048 - accuracy: 0.8460\n",
       "Epoch 77/100\n",
       "27311/27311 [==============================] - 18s 645us/step - loss: 0.4047 - accuracy: 0.8460\n",
