airport code edits and new 2019 & 2020 flight data

--- a/Database/weather/airport_weather.ipynb
+++ b/Database/weather/airport_weather.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -384,7 +384,7 @@
        "[565963 rows x 20 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
        "[347 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +537,7 @@
        "Name: City, Length: 347, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +570,7 @@
        "Name: City, Length: 347, dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -677,7 +677,7 @@
        "[347 rows x 1 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -690,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -784,7 +784,7 @@
        "[347 rows x 1 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -903,7 +903,7 @@
        "[347 rows x 2 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -938,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1054,7 @@
        "[347 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -1428,7 +1428,7 @@
        "[565963 rows x 20 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1440,7 +1440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -1826,7 +1826,7 @@
        "[564548 rows x 21 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1839,7 +1839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -2225,7 +2225,7 @@
        "[564548 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6581,6 +6581,48 @@
    "outputs": [],
    "source": [
     "clean_complete_flight_2020_df.to_csv(\"../../Database/clean_2020_flight_data.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "ORIGIN                    object\n",
+       "ORIGIN_CITY               object\n",
+       "DAY_OF_MONTH              object\n",
+       "DAY_OF_WEEK                int64\n",
+       "OP_CARRIER_AIRLINE_ID      int64\n",
+       "OP_CARRIER                object\n",
+       "TAIL_NUM                  object\n",
+       "OP_CARRIER_FL_NUM          int64\n",
+       "ORIGIN_AIRPORT_ID          int64\n",
+       "ORIGIN_AIRPORT_SEQ_ID      int64\n",
+       "DEST_AIRPORT_ID            int64\n",
+       "DEST_AIRPORT_SEQ_ID        int64\n",
+       "DEST                      object\n",
+       "DEP_TIME                 float64\n",
+       "DEP_DEL15                float64\n",
+       "DEP_TIME_BLK              object\n",
+       "ARR_TIME                 float64\n",
+       "ARR_DEL15                float64\n",
+       "CANCELLED                  int64\n",
+       "DIVERTED                   int64\n",
+       "DISTANCE                   int64\n",
+       "DEST_CITY                 object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "clean_complete_flight_2020_df.dtypes"
    ]
   },
   {
