Updated so model could be put into production.

--- a/Seg_three_Machine Learning Model.ipynb
+++ b/Seg_three_Machine Learning Model.ipynb
@@ -3165,11 +3165,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Setup input dataframe with what the model was trained with\n",
+    "## set column names\n",
     "input_columns = ['origin', 'dest', 'DEP_Hour', 'windspeedKmph', 'precipMM', 'Carrier_9E'\n",
     "                           , 'Carrier_AA', 'Carrier_AS', 'Carrier_B6', 'Carrier_DL', 'Carrier_EV'\n",
     "                           , 'Carrier_F9', 'Carrier_G4', 'Carrier_HA', 'Carrier_MQ', 'Carrier_NK'\n",
     "                           , 'Carrier_OH', 'Carrier_OO', 'Carrier_UA', 'Carrier_WN', 'Carrier_YV'\n",
-    "                           , 'Carrier_YX']\n",
+    "                          , 'Carrier_YX']\n",
+    "\n",
+    "## Initial set of parameters for a test \n",
     "op_carrier = '9E'\n",
     "origin = 'ATL'\n",
     "dest = 'FSM'\n",
@@ -3177,18 +3181,19 @@
     "windspeedKmph = 10.0\n",
     "precipMM = 2.4\n",
     "\n",
+    "## Setup the actual dataframe\n",
     "inputs_df = pd.DataFrame(columns = input_columns)\n",
     "\n",
+    "## Create set date to put into model\n",
     "inputs_df['DEP_Hour'] = range(0, 24, 1)\n",
     "inputs_df['origin'] = origin\n",
     "inputs_df['dest'] = dest\n",
     "inputs_df['windspeedKmph'] = windspeedKmph\n",
     "inputs_df['precipMM'] = precipMM\n",
-    "\n",
     "carrier_column = \"Carrier_\" + op_carrier\n",
     "inputs_df[carrier_column] = 1\n",
     "\n",
-    "\n",
+    "## Remove all NAN since that is not how the model was trained.\n",
     "inputs_df = inputs_df.fillna(0)\n"
    ]
   },
@@ -4153,6 +4158,8 @@
     }
    ],
    "source": [
+    "# Encode Data\n",
+    "## create new dataframe so it will be easy to compare to later\n",
     "inputs_df_encoded = inputs_df\n",
     "\n",
     "# Test Transform if it matches earlier output\n",
@@ -4240,6 +4247,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# add the prediction back to the original inputs\n",
     "inputs_df['delayed'] = y_pred"
    ]
   },
