integrated the machine learning model

--- a/airport_weather.ipynb
+++ b/airport_weather.ipynb
@@ -918,6 +918,324 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>code</th>\n",
+       "      <th>date</th>\n",
+       "      <th>hour</th>\n",
+       "      <th>visibility</th>\n",
+       "      <th>cloudcover</th>\n",
+       "      <th>windspeed</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>precipitation</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>748</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>40</td>\n",
+       "      <td>14</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>749</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>45</td>\n",
+       "      <td>12</td>\n",
+       "      <td>77</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>750</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>50</td>\n",
+       "      <td>10</td>\n",
+       "      <td>76</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>751</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>48</td>\n",
+       "      <td>9</td>\n",
+       "      <td>73</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>752</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>8</td>\n",
+       "      <td>9</td>\n",
+       "      <td>46</td>\n",
+       "      <td>9</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>753</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>9</td>\n",
+       "      <td>9</td>\n",
+       "      <td>45</td>\n",
+       "      <td>8</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>754</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>10</td>\n",
+       "      <td>9</td>\n",
+       "      <td>47</td>\n",
+       "      <td>10</td>\n",
+       "      <td>66</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>755</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>11</td>\n",
+       "      <td>10</td>\n",
+       "      <td>49</td>\n",
+       "      <td>12</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>756</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>51</td>\n",
+       "      <td>14</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>757</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>13</td>\n",
+       "      <td>10</td>\n",
+       "      <td>43</td>\n",
+       "      <td>11</td>\n",
+       "      <td>67</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>758</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>14</td>\n",
+       "      <td>9</td>\n",
+       "      <td>36</td>\n",
+       "      <td>8</td>\n",
+       "      <td>68</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>759</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>15</td>\n",
+       "      <td>9</td>\n",
+       "      <td>28</td>\n",
+       "      <td>5</td>\n",
+       "      <td>69</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>760</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>16</td>\n",
+       "      <td>9</td>\n",
+       "      <td>29</td>\n",
+       "      <td>7</td>\n",
+       "      <td>70</td>\n",
+       "      <td>0.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>761</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>17</td>\n",
+       "      <td>10</td>\n",
+       "      <td>30</td>\n",
+       "      <td>8</td>\n",
+       "      <td>71</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>762</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>18</td>\n",
+       "      <td>10</td>\n",
+       "      <td>31</td>\n",
+       "      <td>10</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>763</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-01</td>\n",
+       "      <td>19</td>\n",
+       "      <td>10</td>\n",
+       "      <td>29</td>\n",
+       "      <td>11</td>\n",
+       "      <td>74</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>772</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>24</td>\n",
+       "      <td>8</td>\n",
+       "      <td>76</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>773</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>20</td>\n",
+       "      <td>8</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>774</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>6</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>75</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>775</th>\n",
+       "      <td>SFO</td>\n",
+       "      <td>2021-01-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>10</td>\n",
+       "      <td>16</td>\n",
+       "      <td>8</td>\n",
+       "      <td>72</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    code        date  hour  visibility  cloudcover  windspeed  humidity  \\\n",
+       "748  SFO  2021-01-01     4          10          40         14        77   \n",
+       "749  SFO  2021-01-01     5          10          45         12        77   \n",
+       "750  SFO  2021-01-01     6          10          50         10        76   \n",
+       "751  SFO  2021-01-01     7          10          48          9        73   \n",
+       "752  SFO  2021-01-01     8           9          46          9        69   \n",
+       "753  SFO  2021-01-01     9           9          45          8        66   \n",
+       "754  SFO  2021-01-01    10           9          47         10        66   \n",
+       "755  SFO  2021-01-01    11          10          49         12        67   \n",
+       "756  SFO  2021-01-01    12          10          51         14        67   \n",
+       "757  SFO  2021-01-01    13          10          43         11        67   \n",
+       "758  SFO  2021-01-01    14           9          36          8        68   \n",
+       "759  SFO  2021-01-01    15           9          28          5        69   \n",
+       "760  SFO  2021-01-01    16           9          29          7        70   \n",
+       "761  SFO  2021-01-01    17          10          30          8        71   \n",
+       "762  SFO  2021-01-01    18          10          31         10        72   \n",
+       "763  SFO  2021-01-01    19          10          29         11        74   \n",
+       "772  SFO  2021-01-02     4          10          24          8        76   \n",
+       "773  SFO  2021-01-02     5          10          20          8        75   \n",
+       "774  SFO  2021-01-02     6          10          16          8        75   \n",
+       "775  SFO  2021-01-02     7          10          16          8        72   \n",
+       "\n",
+       "     precipitation  \n",
+       "748            0.0  \n",
+       "749            0.0  \n",
+       "750            0.0  \n",
+       "751            0.0  \n",
+       "752            0.1  \n",
+       "753            0.1  \n",
+       "754            0.1  \n",
+       "755            0.0  \n",
+       "756            0.0  \n",
+       "757            0.0  \n",
+       "758            0.1  \n",
+       "759            0.1  \n",
+       "760            0.1  \n",
+       "761            0.0  \n",
+       "762            0.0  \n",
+       "763            0.0  \n",
+       "772            0.0  \n",
+       "773            0.0  \n",
+       "774            0.0  \n",
+       "775            0.0  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# get daily weather from 5 AM to 8 PM\n",
+    "airport_weather_df = airport_weather_df.loc[(airport_weather_df[\"hour\"] >= 4) & (airport_weather_df[\"hour\"] <= 19),:]\n",
+    "airport_weather_df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
    "outputs": [],
    "source": [
     "airport_weather_df.to_csv(\"Flight_data_files/airport_weather.csv\", index=False)"
