additonal changes for adding the model to the dashboard

--- a/airport_weather.ipynb
+++ b/airport_weather.ipynb
@@ -182,7 +182,7 @@
    "source": [
     "# Get airport information from database\n",
     "sql=\"SELECT code FROM airports\"\n",
-    "url=\"postgresql://postgres:faB17&rigeme@flightsdata.cxtoxxxge4vx.us-east-2.rds.amazonaws.com:5432/flightsdata\"\n",
+    "url=\"postgresql://username:passwords@url/database\"\n",
     "airport_codes_df = pd.read_sql(sql, url)"
    ]
   },
